# frmb-gui

./: pyproject.toml
frmb_gui/: __init__.py  __main__.py  _app.py  _config.py  _utils.py  _window.py  cli.py  config.py  constants.py  env.py  osplatform.py
frmb_gui/assets/: __init__.py  _about.py  _basedialog.py  _context.py  _delete.py  _headermenu.py  _headerwidget.py  _hierarchybrowser.py  _icon.py  _issue.py  _overlay.py  _rootcreate.py  _rootselector.py  _switch.py
frmb_gui/core/: __init__.py  _context.py  _root.py  _utils.py
frmb_gui/resources/: __init__.py  _jinja.py  _style.py  browser.py
frmb_gui/resources/styles/: main.json
frmb_gui/resources/stylesheets/: main.css.jinja2
tests/: test_core_root.py
tests/gui/: font-browser.py  stylesheet-sandbox.py
